[package]
name = "sirmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
reqwest = { version = "0.11", features = ["json","blocking"] }
sysinfo = "0.29.10"
toml = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
